Version 2.02.85 - 
===================================
  Add nightly test for vgimportclone and querying of vgnames with duplicate pvs.
  Fix use of released memory when duplicate PV is found.
  Add "devices/issue_discards" to lvm.conf.
  Issue discards on lvremove, lvreduce, etc if enabled and supported.
  Fix incorrect tests for dm_snprintf() failure.
  Fix some unmatching sign comparation gcc warnings in the code.
  Allow lv_extend() to work on zero length intrinsically layered LVs.
  Keep the cache content when the exported vg buffer is matching.
  Extend the set of memory regions, that are not locked to memory.
  Enhance usability with the valgrind memcheck tool.
  Support regular quit of the lvm_thread_fn function in clvmd.
  Fix reading of unallocated memory in lvm1 format import function.
  Replace several strncmp() calls with id_equal().
  Fix lvmcache_info transfer to orphan_vginfo in _lvmcache_update_vgname().
  Fix -Wold-style-definition gcc warnings.
  Fixes for lvconvert (including --repair) of temporary mirror stacks.
  Mitigate annoying error warning from device is usable check if run as non-root.
  Add missing \0 for grown debug object in _bitset_with_random_bits().
  Fix allocation of system_id buffer in volume_group structure.
  Fix readlink usage inside get_primary_dev().
  Use format instance mempool where possible and adequate.
  Call destroy_instance for any PVs found in VG structure during vg_free call.
  Add new free_pv_fid fn and use it throughout to free all attached fids.
  Use only vg_set_fid and new pv_set_fid fn to assign the format instance.
  Make create_text_context fn static and move it inside create_instance fn.
  Add mem and ref_count fields to struct format_instance for own mempool use.
  Use new alloc_fid fn for common format instance initialisation.
  Optimise _get_token() and _eat_space().
  Add _lv_postorder_vg() to improve efficiency for all LVs in VG.
  Use hash tables to speedup string search in vg_validate().