@@ -28,6 +28,7 @@ static int _test = 0;
 static int _md_filtering = 0;
 static int _pvmove = 0;
 static int _full_scan_done = 0;	/* Restrict to one full scan during each cmd */
+static int _obtain_device_list_from_udev = DEFAULT_OBTAIN_DEVICE_LIST_FROM_UDEV;
 static int _trust_cache = 0; /* Don't scan when incomplete VGs encountered */
 static int _debug_level = 0;
 static int _log_cmd_name = 0;
@@ -70,6 +71,11 @@ void init_pvmove(int level)
 void init_full_scan_done(int level)
 {
 	_full_scan_done = level;
+}
+
+void init_obtain_device_list_from_udev(int device_list_from_udev)
+{
+	_obtain_device_list_from_udev = device_list_from_udev;
 }
 
 void init_trust_cache(int trustcache)
@@ -183,6 +189,11 @@ int pvmove_mode(void)
 int full_scan_done(void)
 {
 	return _full_scan_done;
+}
+
+int obtain_device_list_from_udev()
+{
+	return _obtain_device_list_from_udev;
 }
 
 int trust_cache(void)
